Update subheadline in hero section to encourage donations

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <!-- Main headline -->
         <h1>Charity: Water</h1>
         <!-- Subheadline -->
-        <p>Close The Books Open The World To Clean Water.</p>
+        <p>Close The Books Open The World To Clean Water, Donate Today.</p>
     </section>
 
    
